test/corpus/00_advisortypes.txt
================================================================================
Advisor Types
================================================================================
# If you add advisortypes, and use those tags, do not change them without changing everywhere they are used.
#
# Additional arguments: allow_only_male/allow_only_female
# Contains skill_scaled_modifier for which the effects get multiplied by the advisor's skill level
# Uses all 'modifiers' possible that are exported as a Modifier.

# Note that ai_will_do calculates a priority.
# An advisor may be chosen over another if its random priority exceeds it. RandomPriority(advisor) := rand[1, 2[ * Priority(advisor).


######################################################
# Administrative Advisors
######################################################

######################################################
philosopher = {
	monarch_power = ADM
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = ven_splendor_flag
			}
		}
		modifier = {
			monthly_splendor = 1
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = russian_modernization_mechanic
				NOT = { culture_group = PREV }
			}
		}
		modifier = {
			monthly_russian_modernization = 0.02
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				mission_completed = ENG_royal_society
			}
		}
		modifier = {
			yearly_innovativeness = 0.1
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				mission_completed = LIE_sponsor_arts
			}
		}
		modifier = {
			idea_cost = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = { owner = {  has_country_modifier = mam_adm_advisors_generate_idea_cost_modifier  } }
		modifier = { idea_cost = -0.01 }
	}
	
	# Bonus
	prestige = 1
	skill_scaled_modifier = {
		trigger = { owner = {  has_government_attribute = reform_progress_from_advisors  } }
		modifier = { reform_progress_growth = 0.03 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = 5_gov_cap_bonus_flag 
			}
		}
		modifier = {
			governing_capacity_modifier = 0.03
		}
	}	

	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = fin_fine_finances_flag 
			}
		}
		modifier = {
			global_tax_modifier = 0.05
		}
	}	
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = republican_tradition_from_advisors 
			}
		}
		modifier = {
			republican_tradition = 0.02 
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = {  
				is_emperor_of_china = yes 
			}
		}
		modifier = { meritocracy = 0.25 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = mng_dev_per_adm_advisor_level_flag 
			}
		}
		modifier = {
			development_cost = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = { has_country_modifier = eng_foreign_religious_control }
		}
		modifier = { tolerance_heretic = 1 }
	}
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = advisors_generate_innovativeness 
			}
		}
		modifier = {
			yearly_innovativeness = 0.02 
		}
	}

	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = persian_influence_mechanic
			}
		}
		modifier = {
			monthly_persian_influence = 0.1
		}
	}

	############################
	##EE Skill Scaled Modifiers:
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
			}
		}
		modifier = {
			idea_cost = -0.02
		}
	}
	##End of EE Skill Scaled Modifiers
	############################

	chance = {
		factor = 1
	}
	
	ai_will_do = {
		factor = 1
	}
}

######################################################
natural_scientist = {
	monarch_power = ADM
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = ven_splendor_flag
			}
		}
		modifier = {
			monthly_splendor = 1
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = russian_modernization_mechanic
				NOT = { culture_group = PREV }
			}
		}
		modifier = {
			monthly_russian_modernization = 0.02
		}
	}

	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				mission_completed = ENG_royal_society
			}
		}
		modifier = {
			yearly_innovativeness = 0.1
		}
	}

	skill_scaled_modifier = {
		trigger = { owner = {  has_country_modifier = mam_adm_advisors_generate_idea_cost_modifier  } }
		modifier = { idea_cost = -0.01 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = advisors_generate_innovativeness 
			}
		}
		modifier = {
			yearly_innovativeness = 0.02 
		}
	}
	
	# Bonus
	production_efficiency = 0.10
	skill_scaled_modifier = {
		trigger = { owner = {  has_government_attribute = reform_progress_from_advisors  } }
		modifier = { reform_progress_growth = 0.03 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = 5_gov_cap_bonus_flag 
			}
		}
		modifier = {
			governing_capacity_modifier = 0.05
		}
	}

	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = fin_fine_finances_flag 
			}
		}
		modifier = {
			global_tax_modifier = 0.05
		}
	}	
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = republican_tradition_from_advisors 
			}
		}
		modifier = {
			republican_tradition = 0.02 
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = {  
				is_emperor_of_china = yes 
			}
		}
		modifier = { meritocracy = 0.25 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = mng_dev_per_adm_advisor_level_flag 
			}
		}
		modifier = {
			development_cost = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = { has_country_modifier = eng_foreign_religious_control }
		}
		modifier = { tolerance_heretic = 1 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = persian_influence_mechanic
			}
		}
		modifier = {
			monthly_persian_influence = 0.03
		}
	}

	############################
	##EE Skill Scaled Modifiers:
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
			}
		}
		modifier = {
			state_maintenance_modifier = -0.05
		}
	}
	##End of EE Skill Scaled Modifiers
	############################

	chance = {
		factor = 1
	}
	
	ai_will_do = {
		factor = 1.2
	}
}

######################################################
artist = {
	monarch_power = ADM
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = ven_splendor_flag
			}
		}
		modifier = {
			monthly_splendor = 1
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = russian_modernization_mechanic
				NOT = { culture_group = PREV }
			}
		}
		modifier = {
			monthly_russian_modernization = 0.02
		}
	}

	skill_scaled_modifier = {
		trigger = { owner = {  has_country_modifier = mam_adm_advisors_generate_idea_cost_modifier  } }
		modifier = { idea_cost = -0.01 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = advisors_generate_innovativeness 
			}
		}
		modifier = {
			yearly_innovativeness = 0.02 
		}
	}
	
	# Bonus
	stability_cost_modifier = -0.10
	skill_scaled_modifier = {
		trigger = { owner = {  has_government_attribute = reform_progress_from_advisors  } }
		modifier = { reform_progress_growth = 0.03 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = 5_gov_cap_bonus_flag 
			}
		}
		modifier = {
			governing_capacity_modifier = 0.05
		}
	}

	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = fin_fine_finances_flag 
			}
		}
		modifier = {
			global_tax_modifier = 0.05
		}
	}	
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = republican_tradition_from_advisors 
			}
		}
		modifier = {
			republican_tradition = 0.02 
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = {  
				is_emperor_of_china = yes 
			}
		}
		modifier = { meritocracy = 0.25 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = mng_dev_per_adm_advisor_level_flag 
			}
		}
		modifier = {
			development_cost = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = { has_country_modifier = eng_foreign_religious_control }
		}
		modifier = { tolerance_own = 1 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = persian_influence_mechanic
			}
		}
		modifier = {
			monthly_persian_influence = 0.1
		}
	}
	
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_country_flag = ned_artist_is_architect_flag
			}
		}
		modifier = {
			build_cost = -0.025
		}
	}

	############################
	##EE Skill Scaled Modifiers:
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
			}
		}
		modifier = {
			monthly_splendor = 0.5
		}
	}
	##End of EE Skill Scaled Modifiers
	############################

	chance = {
		factor = 1
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 1.2
			NOT = { stability = 1 }
		}
		modifier = {
			factor = 1.2
			NOT = { stability = 0 }
		}
	}
}

######################################################
treasurer = {
	monarch_power = ADM
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = ven_splendor_flag
			}
		}
		modifier = {
			monthly_splendor = 1
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = russian_modernization_mechanic
				NOT = { culture_group = PREV }
			}
		}
		modifier = {
			monthly_russian_modernization = 0.02
		}
	}

	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = spanish_economic_decline_mechanic
			}
		}
		modifier = {
			monthly_economic_decline = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = { owner = {  has_country_modifier = mam_adm_advisors_generate_idea_cost_modifier  } }
		modifier = { idea_cost = -0.01 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = advisors_generate_innovativeness 
			}
		}
		modifier = {
			yearly_innovativeness = 0.02 
		}
	}
	
	# Bonus
	global_tax_modifier = 0.1
	skill_scaled_modifier = {
		trigger = { owner = {  has_government_attribute = reform_progress_from_advisors  } }
		modifier = { reform_progress_growth = 0.03 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = 5_gov_cap_bonus_flag 
			}
		}
		modifier = {
			governing_capacity_modifier = 0.05
		}
	}

	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				OR = {
					has_country_flag = fin_fine_finances_flag 
					mission_completed = ME_pap_papal_treasury
				}
			}
		}
		modifier = {
			global_tax_modifier = 0.05
		}
	}	
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = republican_tradition_from_advisors 
			}
		}
		modifier = {
			republican_tradition = 0.02 
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = {  
				is_emperor_of_china = yes 
			}
		}
		modifier = { meritocracy = 0.25 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = mng_dev_per_adm_advisor_level_flag 
			}
		}
		modifier = {
			development_cost = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = { has_country_modifier = eng_foreign_religious_control }
		}
		modifier = { religious_unity = 0.15 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = persian_influence_mechanic
			}
		}
		modifier = {
			monthly_persian_influence = 0.03
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = MUG_treasurer_upgrade_flag
			}
		}
		modifier = {
			yearly_corruption = -0.05
		}
	}

	############################
	##EE Skill Scaled Modifiers:
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = ARB_treasurer_now_gives_3_tax
			}
		}
		modifier = { 
			global_tax_modifier = 0.03
		}
	}
	
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
			}
		}
		modifier = {
			development_cost = -0.02
		}
	}

	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
				has_government_attribute = republican_tradition_from_advisors
			}
		}
		modifier = {
			development_cost = 0.02
			meritocracy = 0.25
			republican_tradition = 0.02
		}
	}
	## EE Celtica ##
	skill_scaled_modifier = {
		trigger = { 
			owner = {
				OR = {
					has_country_flag = EE_CLT_treasurer_advisor_buff
					has_country_modifier = EE_FRA_managing_finances
				}
			}
		}
		modifier = { interest = -0.25 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = fin_fine_finances_flag 
				has_government_attribute = republican_tradition_from_advisors
			}
		}
		modifier = {
			global_tax_modifier = 0.05
			meritocracy = 0.25
			republican_tradition = 0.02
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = fin_fine_finances_flag 
				NOT = { has_government_attribute = republican_tradition_from_advisors }
			}
		}
		modifier = {
			global_tax_modifier = 0.05
			meritocracy = 0.25
		}
	}	
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				NOT = { has_country_flag = fin_fine_finances_flag } 
				has_government_attribute = republican_tradition_from_advisors 
			}
		}
		modifier = { 
			meritocracy = 0.25
			republican_tradition = 0.02 
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				NOT = { has_country_flag = fin_fine_finances_flag } 
				NOT = { has_government_attribute = republican_tradition_from_advisors }
			}
		}
		modifier = { meritocracy = 0.25 }
	}

	##End of EE Skill Scaled Modifiers
	############################
	
	chance = {
		factor = 1
	}
	
	ai_will_do = {
		factor = 1.5
	}
}

######################################################
theologian = {
	monarch_power = ADM
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = ven_splendor_flag
			}
		}
		modifier = {
			monthly_splendor = 1
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = russian_modernization_mechanic
				NOT = { culture_group = PREV }
			}
		}
		modifier = {
			monthly_russian_modernization = 0.02
		}
	}

	skill_scaled_modifier = {
		trigger = { owner = {  has_country_modifier = mam_adm_advisors_generate_idea_cost_modifier  } }
		modifier = { idea_cost = -0.01 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = advisors_generate_innovativeness 
			}
		}
		modifier = {
			yearly_innovativeness = 0.02 
		}
	}
	
	# Bonus
	global_unrest = -2
	skill_scaled_modifier = {
		trigger = { owner = {  has_government_attribute = reform_progress_from_advisors  } }
		modifier = { reform_progress_growth = 0.03 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = 5_gov_cap_bonus_flag 
			}
		}
		modifier = {
			governing_capacity_modifier = 0.05
		}
	}

	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = geo_advisor_scaling_flag 
			}
		}
		modifier = {
			yearly_patriarch_authority = 0.002
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = fin_fine_finances_flag 
			}
		}
		modifier = {
			global_tax_modifier = 0.05
		}
	}	
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = republican_tradition_from_advisors 
			}
		}
		modifier = {
			republican_tradition = 0.02 
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = {  
				is_emperor_of_china = yes 
			}
		}
		modifier = { meritocracy = 0.25 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = mng_dev_per_adm_advisor_level_flag 
			}
		}
		modifier = {
			development_cost = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = { has_country_modifier = eng_foreign_religious_control }
		}
		modifier = { global_heretic_missionary_strength = 0.01 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = persian_influence_mechanic
			}
		}
		modifier = {
			monthly_persian_influence = 0.03
		}
	}
	
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = hordes_theologian_tolerance_buff_flag
			}
		}
		modifier = {
			tolerance_heretic = 0.25
			tolerance_heathen = 0.25
		}
	}

	############################
	##EE Skill Scaled Modifiers:
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
			}
		}
		modifier = {
			yearly_corruption = -0.05
		}
	}
	##End of EE Skill Scaled Modifiers
	############################
	
	chance = {
		factor = 1

	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 1.5
			unrest = -1
		}
		modifier = {
			factor = 1.5
			unrest = 1
		}
	}
}

######################################################
master_of_mint = {
	monarch_power = ADM
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = ven_splendor_flag
			}
		}
		modifier = {
			monthly_splendor = 1
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = russian_modernization_mechanic
				NOT = { culture_group = PREV }
			}
		}
		modifier = {
			monthly_russian_modernization = 0.02
		}
	}

	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = spanish_economic_decline_mechanic
			}
		}
		modifier = {
			monthly_economic_decline = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = { owner = {  has_country_modifier = mam_adm_advisors_generate_idea_cost_modifier  } }
		modifier = { idea_cost = -0.01 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = advisors_generate_innovativeness 
			}
		}
		modifier = {
			yearly_innovativeness = 0.02 
		}
	}
	
	# Bonus
	inflation_reduction = 0.10
	skill_scaled_modifier = {
		trigger = { owner = {  has_government_attribute = reform_progress_from_advisors  } }
		modifier = { reform_progress_growth = 0.03 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = 5_gov_cap_bonus_flag 
			}
		}
		modifier = {
			governing_capacity_modifier = 0.05
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				mission_completed = YEM_eastern_hub
			}
		}
		modifier = {
			global_foreign_trade_power = 0.05
		}
	}

	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors
				mission_completed =  EE_spa_la_macha_gold
				has_government_attribute = republican_tradition_from_advisors
			}
		}
		modifier = {
			monthly_gold_inflation_modifier = -0.05
			gold_depletion_chance_modifier = -0.05
			meritocracy = 0.25
			republican_tradition = 0.02
			meritocracy = 0.25
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				NOT = { has_country_flag = me_mug_scaling_advisors }
				mission_completed =  EE_spa_la_macha_gold
				NOT = { has_government_attribute = republican_tradition_from_advisors }
			}
		}
		modifier = {
			monthly_gold_inflation_modifier = -0.05
			meritocracy = 0.25
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
				NOT = { mission_completed =  EE_spa_la_macha_gold }
				NOT = { has_government_attribute = republican_tradition_from_advisors }
			}
		}
		modifier = {
			gold_depletion_chance_modifier = -0.05
			meritocracy = 0.25
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
				mission_completed =  EE_spa_la_macha_gold
				NOT = { has_government_attribute = republican_tradition_from_advisors }
			}
		}
		modifier = {
			gold_depletion_chance_modifier = -0.05
			monthly_gold_inflation_modifier = -0.05
			meritocracy = 0.25
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
				has_government_attribute = republican_tradition_from_advisors
				NOT = { mission_completed =  EE_spa_la_macha_gold }
			}
		}
		modifier = {
			gold_depletion_chance_modifier = -0.05
			meritocracy = 0.25
			republican_tradition = 0.02
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = fin_fine_finances_flag 
			}
		}
		modifier = {
			global_tax_modifier = 0.05
		}
	}	
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = republican_tradition_from_advisors 
			}
		}
		modifier = {
			republican_tradition = 0.02 
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = {  
				is_emperor_of_china = yes 
			}
		}
		modifier = { meritocracy = 0.25 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = mng_dev_per_adm_advisor_level_flag 
			}
		}
		modifier = {
			development_cost = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = { has_country_modifier = eng_foreign_religious_control }
		}
		modifier = { religious_unity = 0.15 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = persian_influence_mechanic
			}
		}
		modifier = {
			monthly_persian_influence = 0.03
		}
	}

	############################
	##EE Skill Scaled Modifiers:
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
			}
		}
		modifier = {
			gold_depletion_chance_modifier = -0.05
		}
	}
	##End of EE Skill Scaled Modifiers
	############################
	
	chance = {
		factor = 1
	}
	
	ai_will_do = {
		factor = 1.2
		modifier = {
			factor = 0.5
			NOT = { inflation = 1 }
		}
	}
}

######################################################
inquisitor = {
	monarch_power = ADM
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_country_flag = ven_splendor_flag
			}
		}
		modifier = {
			monthly_splendor = 1
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = russian_modernization_mechanic
				NOT = { culture_group = PREV }
			}
		}
		modifier = {
			monthly_russian_modernization = 0.02
		}
	}
	allow_only_owner_religion = yes

	skill_scaled_modifier = {
		trigger = { owner = {  has_country_modifier = mam_adm_advisors_generate_idea_cost_modifier  } }
		modifier = { idea_cost = -0.01 }
	}
	
	skill_scaled_modifier = {
		trigger = { owner = {  has_country_flag = azt_inquisitor_buff_flag  } }
		modifier = { monthly_blood = 0.02 }
	}

	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = advisors_generate_innovativeness 
			}
		}
		modifier = {
			yearly_innovativeness = 0.02 
		}
	}
	
	# Bonus
	global_missionary_strength = 0.02

	skill_scaled_modifier = {
		trigger = { owner = {  has_government_attribute = reform_progress_from_advisors  } }
		modifier = { reform_progress_growth = 0.03 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = 5_gov_cap_bonus_flag 
			}
		}
		modifier = {
			governing_capacity_modifier = 0.05
		}
	}


	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = geo_advisor_scaling_flag 
			}
		}
		modifier = {
			yearly_patriarch_authority = 0.002
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = fin_fine_finances_flag 
			}
		}
		modifier = {
			global_tax_modifier = 0.05
		}
	}	
	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = republican_tradition_from_advisors 
			}
		}
		modifier = {
			republican_tradition = 0.02 
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = {  
				is_emperor_of_china = yes 
			}
		}
		modifier = { meritocracy = 0.25 }
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = mng_dev_per_adm_advisor_level_flag 
			}
		}
		modifier = {
			development_cost = -0.02
		}
	}
	skill_scaled_modifier = {
		trigger = {
			owner = { has_country_modifier = eng_foreign_religious_control }
		}
		modifier = { global_heretic_missionary_strength = 0.01 }
	}
	
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = empower_inquisitors_flag 
			}
		}
		modifier = {
			establish_order_cost = -0.05
		}
	}
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				mission_completed = ME_pap_overseas_missions 
			}
		}
		modifier = {
			tolerance_own = 0.2
		}
	}

	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = persian_influence_mechanic
			}
		}
		modifier = {
			monthly_persian_influence = 0.03
		}
	}

	############################
	##EE Skill Scaled Modifiers:
	skill_scaled_modifier = {
		trigger = { 
			owner = { 
				has_country_flag = me_mug_scaling_advisors 
			}
		}
		modifier = {
			missionary_maintenance_cost = -0.1
		}
	}
	##End of EE Skill Scaled Modifiers
	############################
	
	chance = {
		factor = 1
		modifier = {
			factor = 0.1
			has_owner_religion = no
		}
	}
	
	ai_will_do = {
		factor = 1.2
		modifier = {
			factor = 0.5
			religious_unity = 0.95
		}
		modifier = {
			factor = 1.5
			NOT = { religious_unity = 0.8 }
		}
	}
}


######################################################
# Diplomatic Advisors
######################################################

######################################################
statesman = {
	monarch_power = DIP
	skill_scaled_modifier = {
		trigger = {
			owner = {
				has_government_mechanic = russian_modernization_mechanic
				NOT = { culture_group = PREV }
			}
		}
		modifier = {
			monthly_russian_modernization = 0.02
		}
	}

	skill_scaled_modifier = {
		trigger = {
			owner = { 
				has_government_attribute = advisors_generate_innovativeness 
			}
		}
		modifier = {
			yearly_innovativeness = 0.02 
		}
	}
	
	# Bonus
	diplomatic_reputation = 1

	skill_scaled_modifier = {
		trigger = { 
			owner = {  
				has_country_flag = me_mug_scaling_advisors 
			}
		}
		modifier = {
			missionary_maintenance_cost = -0.1
		}
	}

	skill_scaled_modifier = {
		trigger = { 
			owner = {  
				has_country_flag = ee_spa_upgraded_inquisitors 
			}
		}
		modifier = {
			papal_influence = 0.2
		}
	}
